--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     <div class="home_pic">
                         <img id="DpBack" src="DpBack.jpg">
-                        <img id="HR" src="HR.png" alt="">
+                        <img id="HR" src="harsh2.png" alt="">
                     </div>
                 </div>
 
@@ -134,20 +134,20 @@
             <!-- Skills Section Placeholder -->
            <div class="skills">
                    <h1 class="skillsh1">Skills</h1>
-              <div class="skillsCard">
-                  <div class="skillsCardRow1">
-                     <div class="skillsRow1Card1"><img src="./skills/c.png" alt=""></div>
-                     <div class="skillsRow1Card2"><img src="./skills/java.png" alt=""></div>
-                     <div class="skillsRow1Card3"><img src="./skills/python.png" alt=""></div>
-                     <div class="skillsRow1Card4"><img src="./skills/opencv.png" alt=""></div>
-                    <div class="skillsRow1Card5"><img src="./skills/arduino.png" alt=""></div>
+              <div class="skillsCardSection">
+                  <div class="skillsCard" id="skillsCardRow1">
+                     <div    class="skillsCardRow" id="skillsRow1Card1"><img src="./skills/c.png" alt=""></div>
+                     <div    class="skillsCardRow" id="skillsRow1Card2"><img src="./skills/java.png" alt=""></div>
+                     <div    class="skillsCardRow" id="skillsRow1Card3"><img src="./skills/python.png" alt=""></div>
+                     <div    class="skillsCardRow" id="skillsRow1Card4"><img src="./skills/opencv.png" alt=""></div>
+                    <div    class="skillsCardRow" id="skillsRow1Card5"><img src="./skills/arduino.png" alt=""></div>
                   </div>
-                  <div class="skillsCardRow2">
-                      <div class="skillsRow2Card1"><img src="./skills/html.png" alt=""></div>
-                      <div class="skillsRow2Card2"><img src="./skills/css.png" alt=""></div>
-                      <div class="skillsRow2Card3"><img src="./skills/js.png" alt=""></div>
-                      <div class="skillsRow2Card4"><img src="./skills/react.png" alt=""></div>
-                      <div class="skillsRow2Card5"><img src="./skills/sql.png" alt=""></div>
+                  <div class="skillsCard" id="skillsCardRow2">
+                      <div    class="skillsCardRow" id="skillsRow2Card1"><img src="./skills/html.png" alt=""></div>
+                      <div    class="skillsCardRow" id="skillsRow2Card2"><img src="./skills/css.png" alt=""></div>
+                      <div    class="skillsCardRow" id="skillsRow2Card3"><img src="./skills/js.png" alt=""></div>
+                      <div    class="skillsCardRow" id="skillsRow2Card4"><img src="./skills/react.png" alt=""></div>
+                      <div    class="skillsCardRow" id="skillsRow2Card5"><img src="./skills/sql.png" alt=""></div>
                   </div>
                   
 
